syntax = "proto3";

package benchmarkpb;

option go_package = "csb/api/benchmarkpb";

// BenchmarkService defines the interface between control and client
service BenchmarkService {
  rpc CTRLStream(stream CTRLMessage) returns (stream CTRLMessage) {}
}

message CTRLMessage {
  oneof payload {
    KeyBatch key_batch = 1;
    KeyBatchResponse key_batch_response = 2;
    ConfigFile config_file = 3;
    ConfigFileResponse config_file_response = 4;
    Shutdown shutdown = 5;
    BenchmarkFinished benchmark_finished = 6;
  }
}

// KeyBatch represents a batch of keys being sent
message KeyBatch {
  repeated string keys = 1;
  bool is_last_batch = 2;
}

// KeyBatchResponse represents the response after receiving keys
message KeyBatchResponse {
  int32 total_keys_received = 1;
}

message ConfigFile {
  bytes content = 1;
}

message ConfigFileResponse {
  bool success = 1;
}

message Shutdown {}

message BenchmarkFinished {}
